@@ -395,6 +395,8 @@ body {
 
 <p><strong>tooltip_background_border</strong> | <code>int</code> | The pixel size of the border in "images/menus/tooltips.png".</p>
 
+<p><strong>tooltip_visible_max</strong> | <code>int</code> | The maximum number of floating tooltips on screen at once. Defaults to 3.</p>
+
 <hr />
 
 <h4>EngineSettings: Loot</h4>
